# check_bitcoin_price

./: .coderabbit.yaml  .editorconfig  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
check_bitcoin_price/: plugin.py
tests/: test_plugin.py
