[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "check-bitcoin-price"
version = "1.0.0"
description = "A Nagios plugin to monitor Bitcoin price"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thomas Vincent", email = "thomasvincent@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]
keywords = ["nagios", "monitoring", "bitcoin", "cryptocurrency", "plugin"]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "responses>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "types-requests>=2.28.0",
]

[project.scripts]
check_bitcoin_price = "check_bitcoin_price.plugin:main"

[project.urls]
Homepage = "https://github.com/thomasvincent/check_bitcoin_price"
Repository = "https://github.com/thomasvincent/check_bitcoin_price"
Issues = "https://github.com/thomasvincent/check_bitcoin_price/issues"

[tool.hatch.build.targets.wheel]
packages = ["check_bitcoin_price"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["check_bitcoin_price"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=check_bitcoin_price --cov-report=term-missing"

[tool.coverage.run]
source = ["check_bitcoin_price"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
